--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ pages_list:
   About:            '/about'
   Archive:          '/archive'
   Feed:             '/atom.xml'
+  Discussion:       '/discuss'
 
 # About/contact
 author:
