--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ pages_list:
   Archive:          '/archive'
   Feed:             '/atom.xml'
   Discussion:       '/discussion'
+  Latest_Draft:     '/draft'  
 
 # About/contact
 author:
